--- a/src/style/components/_page.scss
+++ b/src/style/components/_page.scss
@@ -1,3 +1,5 @@
+@use "../base/mixins";
+
 .page {
     background: var(--page-background-color);
 
@@ -12,6 +14,10 @@
         }
 
         .page-header-title {
+            font-size: 2rem;
+            color: mixins.color('gray', 900);
+            font-weight: normal;
+            margin: 0;
             padding-bottom: var(--page-gutter);
         }
     }
