--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -13,4 +13,4 @@
 @use "components/button";
 @use "components/page";
 @use "components/panel";
-@use "components/inputs";
+@use "components/form-fields";
