--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -14,4 +14,9 @@
 @use "components/page";
 @use "components/panel";
 @use "components/card";
-@use "components/grid";
+
+/**
+ * 3. Layout
+ */
+@use "layout/grid";
+@use "layout/helpers";
