--- a/src/style/layout/_grid.scss
+++ b/src/style/layout/_grid.scss
@@ -1,13 +1,46 @@
 @use "../base/variables";
 
+.container, .container-fluid {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+@media screen and (min-width: #{map-get(variables.$breakpoints, 'sm')}) {
+    .container {
+        max-width: 540px;
+    }
+}
+
+@media screen and (min-width: #{map-get(variables.$breakpoints, 'md')}) {
+    .container {
+        max-width: 720px;
+    }
+}
+
+@media screen and (min-width: #{map-get(variables.$breakpoints, 'lg')}) {
+    .container {
+        max-width: 960px;
+    }
+}
+
+@media screen and (min-width: #{map-get(variables.$breakpoints, 'xl')}) {
+    .container {
+        max-width: 1140px;
+    }
+}
+
 .row {
     display: flex;
     flex-wrap: wrap;
+    margin-left: -15px;
+    margin-right: -15px;
 
     > .col {
         flex-grow: 1;
         flex-basis: 0;
-        //padding: 0 1rem;
+        padding: 0 15px;
 
         @for $i from 1 through 12 {
             &.col-#{$i} {
