Changed some icon names, changed button padding to work better with icons

--- a/src/style/base/_variables.scss
+++ b/src/style/base/_variables.scss
@@ -88,7 +88,7 @@ $page-gutter: 2rem;
 /**
  * 5. Button
  */
-$button-padding: 1rem;
+$button-padding: 0.9rem;
 $button-font-weight: 600;
 $button-font-size: 1rem;
 
@@ -168,26 +168,26 @@ $icons: (
     'alert-circle': '\e901',
     'alert-triangle': '\e902',
     'archive': '\e903',
-    'arrow-back': '\e904',
+    'arrow-left': '\e904',
     'arrow-circle-down': '\e905',
     'arrow-circle-left': '\e906',
     'arrow-circle-right': '\e907',
     'arrow-circle-up': '\e908',
-    'arrow-down': '\e909',
-    'arrow-downward': '\e90a',
-    'arrow-forward': '\e90b',
-    'arrow-ios-back': '\e90c',
-    'arrow-ios-downward': '\e90d',
-    'arrow-ios-forward': '\e90e',
-    'arrow-ios-upward': '\e90f',
-    'arrow-left': '\e910',
-    'arrow-right': '\e911',
-    'arrow-up': '\e912',
-    'arrow-upward': '\e913',
-    'arrowhead-down': '\e914',
-    'arrowhead-left': '\e915',
-    'arrowhead-right': '\e916',
-    'arrowhead-up': '\e917',
+    'sort-down': '\e909',
+    'arrow-down': '\e90a',
+    'arrow-right': '\e90b',
+    'arrow-alt-left': '\e90c',
+    'arrow-alt-down': '\e90d',
+    'arrow-alt-right': '\e90e',
+    'arrow-alt-up': '\e90f',
+    'sort-left': '\e910',
+    'sort-right': '\e911',
+    'sort-up': '\e912',
+    'arrow-up': '\e913',
+    'chevron-double-down': '\e914',
+    'chevron-double-left': '\e915',
+    'chevron-double-right': '\e916',
+    'chevron-double-up': '\e917',
     'at': '\e918',
     'attach-2': '\e919',
     'attach': '\e91a',
@@ -331,11 +331,11 @@ $icons: (
     'pause-circle': '\e9a4',
     'people': '\e9a5',
     'percent': '\e9a6',
-    'person-add': '\e9a7',
-    'person-delete': '\e9a8',
-    'person-done': '\e9a9',
-    'person': '\e9aa',
-    'person-remove': '\e9ab',
+    'user-add': '\e9a7',
+    'user-delete': '\e9a8',
+    'user-done': '\e9a9',
+    'user': '\e9aa',
+    'user-remove': '\e9ab',
     'phone-call': '\e9ac',
     'phone-missed': '\e9ad',
     'phone-off': '\e9ae',
@@ -372,8 +372,8 @@ $icons: (
     'shopping-cart': '\e9cd',
     'shuffle-2': '\e9ce',
     'shuffle': '\e9cf',
-    'skip-back': '\e9d0',
-    'skip-forward': '\e9d1',
+    'step-backward': '\e9d0',
+    'step-forward': '\e9d1',
     'slash': '\e9d2',
     'smartphone': '\e9d3',
     'smiling-face': '\e9d4',
