--- a/src/style/layout/_helpers.scss
+++ b/src/style/layout/_helpers.scss
@@ -65,3 +65,23 @@
 .background-primary-light {
     background: var(--primary-color-light-background);
 }
+
+.d-flex {
+    display: flex;
+}
+
+.d-inline-flex {
+    display: inline-flex;
+}
+
+.align-items-center {
+    align-items: center;
+}
+
+.justify-content-center {
+    justify-content: center;
+}
+
+.flex-direction-column {
+    flex-direction: column;
+}
