Removed cui prefix

--- a/src/style/components/_button.scss
+++ b/src/style/components/_button.scss
@@ -96,7 +96,7 @@
         display: flex;
         align-items: center;
 
-        .cui-icon {
+        .icon {
             font-size: 1.3rem;
         }
         &.icon-left {
