--- a/src/style/components/_button.scss
+++ b/src/style/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+    background: transparent;
     border: solid 1px transparent;
     border-radius: var(--base-border-radius);
     cursor: pointer;
