--- a/src/style/components/_form-fields.scss
+++ b/src/style/components/_form-fields.scss
@@ -1,6 +1,6 @@
 @use "../base/mixins";
 
-.cui-form-field-base {
+.form-field-base {
     background: #fff;
     border: solid 1px var(--base-border-color);
     border-radius: var(--base-border-radius);
@@ -8,45 +8,45 @@
     position: relative;
     width: auto;
     display: flex;
-    padding: 0 var(--form-field-padding);
     transition: all .1s ease-in-out;
 
-    &.cui-form-field-invalid {
+    &.form-field-invalid {
         border-color: var(--danger-color);
 
-        .cui-form-field-label {
+        .form-field-label {
             color: var(--danger-color);
         }
     }
 
-    &.cui-form-field-valid {
+    &.form-field-valid {
         border-color: var(--success-color);
 
-        .cui-form-field-label {
+        .form-field-label {
             color: var(--success-color);
         }
     }
 
-    .cui-form-field-actions {
+    .form-field-actions {
         align-self: center;
         pointer-events: auto;
         margin-left: var(--form-field-padding);
+        padding: 0 var(--form-field-padding);
     }
 
-    &:hover:not(.cui-form-field-valid):not(.cui-form-field-invalid) {
+    &:hover:not(.form-field-valid):not(.form-field-invalid) {
         border-color: var(--base-border-hover-color);
     }
 
-    &.cui-focused:not(.cui-form-field-valid):not(.cui-form-field-invalid) {
+    &.focused:not(.form-field-valid):not(.form-field-invalid) {
         border-color: var(--primary-color);
 
-        .cui-form-field-label {
+        .form-field-label {
             color: var(--primary-color);
         }
     }
 
-    &.cui-focused, &.cui-has-value {
-        .cui-form-field-label {
+    &.focused, &.has-value {
+        .form-field-label {
             transform: translateY(calc((var(--form-field-padding) / 2) / 2));
             top: 0;
             font: {
@@ -55,15 +55,15 @@
         }
     }
 
-    &.cui-floating-label .cui-form-field  {
-        padding: calc(var(--form-field-padding) + (var(--form-field-padding) / 2)) 0 calc(var(--form-field-padding) / 2);
+    &.floating-label .form-field  {
+        padding: calc(var(--form-field-padding) + (var(--form-field-padding) / 2)) var(--form-field-padding) calc(var(--form-field-padding) / 2);
     }
 
-    &:not(.cui-floating-label) .cui-form-field {
-        padding: var(--form-field-padding) 0;
+    &:not(.floating-label) .form-field {
+        padding: var(--form-field-padding);
     }
 
-    .cui-form-field {
+    .form-field {
         background: none;
         border-radius: var(--base-border-radius);
         border: none;
@@ -74,20 +74,22 @@
             weight: var(--form-field-font-weight);
         }
         pointer-events: auto;
+        line-height: 1.3rem;
     }
 
-    .cui-form-field-label {
+    .form-field-label {
         font: {
             size: var(--form-field-font-size);
         }
         color: mixins.color('gray', 700);
         position: absolute;
         top: 50%;
+        left: var(--form-field-padding);
         transform: translateY(-50%);
         transition: all .1s ease-in-out;
     }
 
-    &.cui-toggles {
+    &.toggles {
         position: relative;
 
         &:after {
