--- a/src/style/components/_icons.scss
+++ b/src/style/components/_icons.scss
@@ -4,6 +4,7 @@
     font: {
         family: 'Cui-Icons';
         style: normal;
+        size: 1.3rem;
     }
     line-height: 1;
     display: inline-block;
