--- a/src/style/components/_forms.scss
+++ b/src/style/components/_forms.scss
@@ -9,3 +9,14 @@
     display: inline-block;
     margin-bottom: 0.5rem;
 }
+
+.form-message {
+    &.form-message-valid {
+        color: var(--success-color);
+    }
+
+    &.form-message-invalid {
+        font-weight: 500;
+        color: var(--danger-color);
+    }
+}
